--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript", "next", "prettier"]
+  "extends": ["next/core-web-vitals", "next/typescript", "next", "prettier"],
+  "rules": {
+    "react/no-unescaped-entities": "off"
+  }
 }
